<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AcronymFragment">

    <data>
        <variable
            name="viewModel"
            type="com.albertsons.acronyms.viewmodel.AcronymViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey">

            <EditText
                android:id="@+id/acronym"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginEnd="@dimen/standardMargin"
                android:inputType="textCapCharacters"
                android:hint="Acronym"
                app:layout_constraintEnd_toStartOf="@+id/lookup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="MVVM" />

            <Button
                android:id="@+id/lookup"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standardMargin"
                android:text="Lookup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:focusable="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/definitionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginEnd="@dimen/standardMargin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acronym"
                tools:listitem="@layout/item_definition" />

            <ProgressBar
                android:id="@+id/loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:exceptionType="@{viewModel.eventError}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>