<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="definition"
            type="com.albertsons.acronyms.domain.Definition" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/framePadding">

        <TextView
            android:id="@+id/definitionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lineMargin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@{definition.text}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Model, View, ViewModel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>